# hanoi-crossing

./: README.md  design.md  pyproject.toml
examples/: n1_win.json  n1_win.txt
src/hanoi_crossing/: __init__.py  actions.py  agents.py  cli.py  engine.py  formatting.py  models.py  runner.py  types.py
src/hanoi_crossing/cli/: __init__.py  random_cli.py  random_play.py  replay.py  replay_cli.py
src/tests/: test_actions.py  test_engine.py  test_formatting.py  test_runner.py
tests/: test_engine.py
